--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Launch EvaluatorUI",
+      "request": "launch",
+      "mainClass": "evaluator.EvaluatorUI",
+      "projectName": "project-1---calculator-BasedKillua_c09a15e4"
+    },
+    {
+      "type": "java",
       "name": "Launch Evaluator",
       "request": "launch",
       "mainClass": "evaluator.Evaluator",
